force-app/main/default/objects/MUSW__Application_Contact__c/fields/CVRD_DS_Agent__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent</label>
    <type>Checkbox</type>
</CustomField>