force-app/main/default/objects/MUSW__Application_Contact__c/fields/CVRD_DS_Owner_City__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Owner_City__c</fullName>
    <label>City</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>