force-app/main/default/objects/MUSW__Application_Contact__c/fields/CVRD_DS_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Owner_Country__c</fullName>
    <label>Owner Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Countries</valueSetName>
    </valueSet>
</CustomField>