force-app/main/default/objects/MUSW__Application_Contact__c/fields/CVRD_DS_Owner_State__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Owner_State__c</fullName>
    <label>Owner State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_North_America_State</valueSetName>
    </valueSet>
</CustomField>