force-app/main/default/objects/MUSW__Application_Contact__c/fields/CVRD_DS_Owner_Street__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Owner_Street__c</fullName>
    <label>Owner Street</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>